@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: unixInit.test,v 1.30.2.3 2003/11/10 20:32:34 dgp Exp $
+# RCS: @(#) $Id: unixInit.test,v 1.30.2.4 2004/02/17 23:46:53 hobbs Exp $
 
 package require tcltest 2
 namespace import -force ::tcltest::*
@@ -353,6 +353,19 @@ test unixInit-5.1 {Tcl_Init} {emptyTest unixOnly} {
 
 test unixInit-6.1 {Tcl_SourceRCFile} {emptyTest unixOnly} {
 } {}
+
+test unixInit-7.1 {closed standard channel: Bug 772288} -body {
+    set tclsh [interpreter]
+    makeFile {puts [open /dev/null]} crash.tcl
+    makeFile [subst -nocommands {
+	close stdin
+	exec $tclsh crash.tcl
+    }] crashtest.tcl
+    exec $tclsh crashtest.tcl
+} -cleanup {
+    removeFile crash.tcl
+    removeFile crashtest.tcl
+} -returnCodes 0
 
 # cleanup
 if {[info exists oldlibrary]} {
